--- a/polbot-core/src/main/resources/Messages.properties
+++ b/polbot-core/src/main/resources/Messages.properties
@@ -3,5 +3,7 @@ currencyconfig.currencyPair=Currency Pair
 currencyconfig.usableBalancePercent=Usable Balance Percent
 currencyconfig.buyOnPercent=Buy On Percent
 currencyconfig.sellOnPercent=Sell On Percent
+currencyconfig.buyAtPrice=Buy At Price
+currencyconfig.sellAtPrice=Sell At Price
 currencyconfig.buyable=Can Buy
 currencyconfig.sellable=Can Sell
