balances page added. username login added

--- a/polbot-core/src/main/resources/Messages.properties
+++ b/polbot-core/src/main/resources/Messages.properties
@@ -7,3 +7,5 @@ currencyconfig.buyAtPrice=Buy At Price
 currencyconfig.sellAtPrice=Sell At Price
 currencyconfig.buyable=Can Buy
 currencyconfig.sellable=Can Sell
+balance.title=Balances
+currencyconfig.buyOrderCancellationHour=Cancel Limit
