trade config added, hisitory removed from menu

--- a/polbot-core/src/main/resources/Messages.properties
+++ b/polbot-core/src/main/resources/Messages.properties
@@ -1,6 +1,6 @@
 currencyconfig.title=Currency Config
 currencyconfig.currencyPair=Currency Pair
-currencyconfig.usableBalancePercent=Usable Balance Percent
+currencyconfig.usableBalance=Usable Balance Percent
 currencyconfig.buyOnPercent=Buy On Percent
 currencyconfig.sellOnPercent=Sell On Percent
 currencyconfig.buyAtPrice=Buy At Price
@@ -9,3 +9,16 @@ currencyconfig.buyable=Can Buy
 currencyconfig.sellable=Can Sell
 balance.title=Balances
 currencyconfig.orderTimeoutInHour=Cancel Limit
+bottradeconfig.title=Bot Trade Config
+bottradeconfig.usableBalance=Balance
+bottradeconfig.buyAtPriceHigh=Buy High
+bottradeconfig.buyAtPrice=Buy Middle
+bottradeconfig.buyAtPriceLow=Buy Low
+bottradeconfig.buySplitHalfCount=Buy Half Split
+bottradeconfig.sellAtPriceHigh=Sell High
+bottradeconfig.sellAtPrice=Sell Middle
+bottradeconfig.sellAtPriceLow=Sell Low
+bottradeconfig.sellSplitHalfCount=Sell Half Split
+bottradeconfig.sellModePrice=Sell Mode Price
+bottradeconfig.stopLossPrice=Stop Loss Price
+bottradeconfig.orderTimeoutInHour=Timeout (Hour)
