PoloniexTradeConfigBot.java: danger sell fixed mybottradeconfigs.html new columns

--- a/polbot-core/src/main/resources/Messages.properties
+++ b/polbot-core/src/main/resources/Messages.properties
@@ -22,3 +22,10 @@ bottradeconfig.sellSplitHalfCount=Sell Half Split
 bottradeconfig.sellModePrice=Sell Mode Price
 bottradeconfig.stopLossPrice=Stop Loss Price
 bottradeconfig.orderTimeoutInHour=Timeout (Hour)
+bottradeconfig.created=Created
+bottradeconfig.updated=Updated
+bottradeconfig.sellMode=Sell Mode
+bottradeconfig.sellOrderGiven=Sell Order Given
+bottradeconfig.buyOrderGiven=Buy Order Given
+bottradeconfig.status=Status
+bottradeconfig.completed=Completed?
